--- a/src/NMatcher/NMatcher.csproj
+++ b/src/NMatcher/NMatcher.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Sprache" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Matching\" />
+  </ItemGroup>
+
 </Project>
