POC json matching

--- a/src/NMatcher/NMatcher.csproj
+++ b/src/NMatcher/NMatcher.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="Sprache" Version="2.1.0" />
   </ItemGroup>
 
