--- a/tests/NMatcher.IntegrationTests/NMatcher.IntegrationTests.csproj
+++ b/tests/NMatcher.IntegrationTests/NMatcher.IntegrationTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
