--- a/src/NMatcher/NMatcher.csproj
+++ b/src/NMatcher/NMatcher.csproj
@@ -1,7 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  
   <PropertyGroup>
     <TargetFrameworks>net46;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <Description>NMatcher is a simple library that eases tests (mostly with json).</Description>
+    <Copyright>Copyright NMatcher Contributors 2017</Copyright>
+    <AssemblyTitle>NMatcher</AssemblyTitle>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Michal Dabrowski;Contributors</Authors>
+    <AssemblyName>NMatcher</AssemblyName>
+    <PackageId>NMatcher</PackageId>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/defrag/NMatcher</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
