--- a/tests/NMatcher.IntegrationTests/NMatcher.IntegrationTests.csproj
+++ b/tests/NMatcher.IntegrationTests/NMatcher.IntegrationTests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.0;netcoreapp1.0</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
