--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+      
+      - name: Display dotnet version
+        run: dotnet --version          
+          
       - name: Install dependencies
         run: dotnet restore
+      
       - name: Build
         run: dotnet build --configuration Release --no-restore
+      
       - name: Test
         run: dotnet test --no-restore
