Changing approach in NMatcher for version 2.0  (#15)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,20 +8,33 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        dotnet-version: ['5.0.x', '6.0.x' ]
+        dotnet-version: ['5.0.x', '6.0.x']
 
     steps:
       - uses: actions/checkout@v3
+      
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+        id: setupstep
+
+#      - name: Create temporary global.json
+#        run: |
+#          echo '{"sdk":{"version": "${{ steps.setupstep.outputs.dotnet-version }}" } }' > ./global.json   
+        
+      - name: Display dotnet version
+        run: dotnet --version
+        
+      
       - name: Install dependencies
         run: dotnet restore
+      
       - name: Build
         run: dotnet build --configuration Release --no-restore
+      
       - name: Test
         run: dotnet test --no-restore
