--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        dotnet-version: ['5.0.x', '6.0.x']
+        dotnet-version: ['6.0.x', '7.0.x']
 
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +21,10 @@ jobs:
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
         id: setupstep
+
+      - name: Create temporary global.json
+        run: |
+          echo '{"sdk":{"version": "${{ steps.setupstep.outputs.dotnet-version }}" } }' > ./global.json
 
       - name: Display dotnet version
         run: dotnet --version
