--- a/src/NMatcher.FluentAssertions/NMatcher.FluentAssertions.csproj
+++ b/src/NMatcher.FluentAssertions/NMatcher.FluentAssertions.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Description>NMatcher is a simple library that eases tests (mostly with json). Package
+        includes the FluentAssertions extension to ease the testing.</Description>
+        <PackageReadmeFile>README.FluentAssertions.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\NMatcher\NMatcher.csproj" />
+      <None Include="..\..\README.FluentAssertions.md" Pack="true" PackagePath="$(PackageReadmeFile)"/>
     </ItemGroup>
 
 </Project>
