--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,4 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       
       - name: Test
-        run: dotnet test --no-restore
+        run: dotnet test --no-restore --filter Category!=Samples
